# lab-5

./: .gitignore  CMakeLists.txt  README.md  lab5.run.sh  package.xml
docker/: Dockerfile  forReference.txt  lab-5-compose.yml  lab-5.repos
docker/.devcontainer/: devcontainer.json
lab_moveit_scripts/: CMakeLists.txt  package.xml
lab_moveit_scripts/launch/: gz_moveit.launch.py
lab_moveit_scripts/scripts/: ur3_joint_goal.py
macos/: macos.md
robot_3r_bringup/: package.xml
robot_3r_bringup/launch/: robot_3r_bringup.launch.py
robot_3r_description/: package.xml
robot_3r_description/config/: controllers.yaml  initial_positions.yaml
robot_3r_description/urdf/: robot_3r.materials.xacro  robot_3r.urdf.xacro  robot_3r_macro.urdf.xacro
robot_3r_gz_sim/: CMakeLists.txt  package.xml
robot_3r_gz_sim/launch/: robot_3r_gz.launch.py
robot_3r_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robot_3r_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  robot_3r.ros2_control.xacro  robot_3r.srdf  robot_3r.urdf.xacro
robot_3r_moveit_config/launch/: demo.launch.py  move_group.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py
robot_3r_moveit_scripts/: CMakeLists.txt  package.xml
src/: test_docker.py
src/concepts/: astar_search.py  coll_det.py  config_space.py  cspace_tree.py  cubic_trajectory.py
src/concepts/utils/: helpers.py  params.py  rrt_star.py
src/hande_action_client/: package.xml  setup.cfg  setup.py
src/hande_action_client/hande_action_client/: hande_command.py
src/lab_moveit_scripts/: CMakeLists.txt  package.xml
src/lab_moveit_scripts/launch/: gz_moveit.launch.py
src/lab_moveit_scripts/scripts/: ur3_pose_goal.py
src/pymoveit2/pymoveit2/: moveit2_gripper.py  utils.py
src/pymoveit2/pymoveit2/robots/: __init__.py  robot_3r.py  ur.py  ur3e_hande.py
src/robot_3r_bringup/: CMakeLists.txt  LICENSE  package.xml
src/robot_3r_bringup/launch/: robot_3r_bringup.launch.py  robot_3r_moveit.launch.py
src/robot_3r_bringup/scripts/: test_docker.py
src/robot_3r_description/: CMakeLists.txt  package.xml
src/robot_3r_description/launch/: view_3r.launch.py
src/robot_3r_description/rviz/: view_3r.rviz  view_3r_tf.rviz  view_3r_tf_obs.rviz  view_3r_tf_obs_ex.rviz
src/robot_3r_description/urdf/: robot_3r.ros2_control.xacro  robot_3r_macro.urdf.xacro
src/robot_3r_gz_sim/: CMakeLists.txt  LICENSE  package.xml
src/robot_3r_gz_sim/launch/: robot_3r_gz.launch.py
src/robot_3r_gz_sim/models/box_obstacle/: model.config  model.sdf
src/robot_3r_gz_sim/scripts/: spawn_obstacles.py
src/robot_3r_interfaces/: CMakeLists.txt  package.xml
src/robot_3r_interfaces/msg/: JointSpacePath.msg  RigidBodyGeom.msg  SceneObstacles.msg
src/robot_3r_interfaces/srv/: CheckCollision.srv
src/robot_3r_moveit_config/: .setup_assistant  package.xml
src/robot_3r_moveit_config/config/: joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  robot_3r.srdf
src/robot_3r_moveit_config/launch/: moveit_rviz.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/robot_3r_moveit_scripts/: package.xml
src/robot_3r_moveit_scripts/scripts/: joint_goal.py  pose_goal.py
src/robot_3r_msgs/: CMakeLists.txt  package.xml
src/robot_3r_msgs/msg/: CartesianPath.msg
src/robot_3r_planners/: package.xml  setup.cfg  setup.py
src/robot_3r_planners/robot_3r_planners/exercise/: informed_rrts_planner.py
src/robot_3r_planners/robot_3r_planners/scripts/: .gitignore  collision_checker.py  robot_geom_publisher.py  sampling_based_planner.py  simple_obstacle_publisher.py
src/robot_3r_planners/robot_3r_planners/utils/: collision_utils.py  param_utils.py  planning_utils.py  urdf_parser.py
src/robot_3r_planners/robot_3r_planners/visualization/: path_markers.py
src/robot_3r_trajectory/: package.xml  setup.cfg  setup.py
src/robot_3r_trajectory/robot_3r_trajectory/: polynomial_trajectory.py  trapezoidal_trajectory.py  via_point_trajectory.py
src/ur3e_hande/ur3e_hande_description/launch/: view.launch.py
src/ur3e_hande/ur3e_hande_description/urdf/: table.urdf.xacro  ur3e_hande.urdf.xacro
src/ur3e_hande/ur3e_hande_description/urdf/sensors/: camera.urdf.xacro
src/ur3e_hande/ur3e_hande_gz/launch/: view_gz.launch.py
src/ur3e_hande/ur3e_hande_gz/models/aruco_box/: model.sdf
src/ur3e_hande/ur3e_hande_gz/models/vention_table/: model.sdf
src/ur3e_hande/ur3e_hande_gz/scripts/: sensor_tf_listener.py
src/ur3e_hande/ur3e_hande_gz/worlds/: bin.sdf
src/ur3e_hande/ur3e_hande_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur3e_hande/ur3e_hande_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  ur3e_hande.ros2_control.xacro  ur3e_hande.srdf  ur3e_hande.urdf.xacro
src/ur3e_hande/ur3e_hande_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/ur3e_hande/ur3e_hande_planning_interfaces/: CMakeLists.txt  package.xml
src/ur3e_hande/ur3e_hande_planning_interfaces/srv/: AddObject.srv  MoveObject.srv  RemoveObject.srv
src/ur3e_hande_moveit_scripts/: package.xml  setup.cfg  setup.py
src/ur3e_hande_moveit_scripts/ur3e_hande_moveit_scripts/launch/: gz_moveit.launch.py
src/ur3e_hande_moveit_scripts/ur3e_hande_moveit_scripts/scripts/: ur3_joint_goal.py  ur3_moveit_config.py  ur3_moveit_scene.py
src/ur3e_hande_scene_manager/: LICENSE  package.xml  setup.cfg  setup.py
src/ur3e_hande_scene_manager/ur3e_hande_scene_manager/: scene_manager.py
src/ur3e_hande_scene_manager/ur3e_hande_scene_manager/config/: scene.yaml  scene_old.yaml
src/ur3e_hande_task_server/: package.xml  setup.cfg  setup.py
src/ur3e_hande_task_server/ur3e_hande_task_server/: task_server.py
srdf/: ur3e_hande.srdf
