<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_3r_planners</name>
  <version>0.0.0</version>
  <description>The robot_3r_planners package. Part of the lab_moveit metapackage.</description>
  <maintainer email="me@clintonenwerem.com">Clinton Enwerem</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>realsense2_camera_msgs</depend>
  <depend>pymoveit2</depend>
  <depend>robot_3r_description</depend>
  <depend>robot_3r_moveit_config</depend>
  <depend>robot_3r_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
