<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur3e_hande_moveit_scripts</name>
  <version>0.0.0</version>
  <description>The ur3e_hande_moveit_scripts package.</description>
  <maintainer email="me@clintonenwerem.com">Clinton Enwerem</maintainer>
  <license>BSD</license>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>realsense2_camera_msgs</depend>
  <depend>pymoveit2</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
