<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur3e_hande_planning_interfaces</name>
  <version>0.0.0</version>
  <description>Planning interfaces for UR3e HandE robot</description>
  <maintainer email="enwerem@terpmail.umd.edu">Clinton Enwerem</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend> 
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
